# dmx

./: .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  PUBLISHING_GUIDE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  build_and_publish.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  publish.yml
dmx/: __init__.py  __main__.py  api_client.py  cli.py  config.py  deemix_client.py  error_handler.py  interactive.py  music_client.py  preview_player.py
tests/: __init__.py  conftest.py  test_api_client.py  test_error_handler.py
